welcome.lessons.welcome.array.golomb.Golomb.scala.error
island:4: error: not found: value nums
    if (num(i)==0 && nums(i+1)==1) {
                     ^island:6: error: not found: value nums
      if (nums(i+1)==1 && nums(i+2)==2) {
          ^island:6: error: not found: value nums
      if (nums(i+1)==1 && nums(i+2)==2) {
                          ^